# dbmsClient

./: CMakeLists.txt  appsettings.cpp  appsettings.h  dbtreewidget.cpp  dbtreewidget.h  defines.h  finddialog.h  findform.cpp  findform.h  findreplaceform.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newtabledialog.cpp  newtabledialog.h  newtabledialog.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  resources.qrc  scriptwidget.cpp  scriptwidget.h  scriptwidget.ui  settings.cpp  settings.h
